  objects, assuming that the target is both visible and reachable (thanks
  Arakira).

--Added a publicly known shared secret between the client and the server to
  prevent unfairly modded clients from connecting to the server without the
  modder realizing the implications (thanks Zed).

--Changed to included shared secret in map encryption for maps sent with
  start_rob_house.






Version 28   Live Server Fixes

--Fixed a security hole in download code exchange between game server and
  ticket server (thanks Der).




Version 28   2014-January-2

--Fixed pits so they are not marked as walls (so they allow true walls to
  dominate the orientation of windows and doors) and are forced under the
  shadows (to avoid having them drawn on top of player or mobiles) (thanks
  Arakira).  This also makes pits invisible behind doors (thanks Simoon).

--Fixed so that doors can't be seen behind doors (thanks Simoon).

--Rewrote visibility fading code, fixing many visual inconsistencies.
  Connected walls are now never cut off, and unconnected walls are now no
  longer visible behind doors.

--Family and mobiles now fade both in and out when they step from invisible
  region to visible region or vice versa (no pop-out or pop-in).
 
--Changed to push placed mobile objects instantly into the mobile layer during
  editing to correct visual differences between placed main-layer mobile
  objects in edit mode and those that have already been moved into the mobile
  layer by check-in.

--Moved vertically oriented animal sprites up to avoid having them stick out
  under the feet of family members that are standing on the same tile.  Their
  positions relative to other objects look better now in general.

--Fixed barely-visible stuff through narrow gaps so that it's actually not
  counted as visible by the game by patching up the shroud and visibility map
  to remove visibility islands (thanks Pottage).

--Added an undoable Sell All button to the backpack screen that allows you to