@@ -77,6 +77,7 @@ sha1Encryption.cpp \
 EyedropperStatusDisplay.cpp \
 secureString.cpp \
 sharedServerSecret.cpp \
+mapEncryptionKey.cpp \
 
 
 
